before create nev brunch

--- a/#src/_header.html
+++ b/#src/_header.html
@@ -13,34 +13,15 @@
 			<li> <a class="menu__item" href="#">контакты</a></li>
 			<li> <a class="menu__item" href="#">контакты</a></li>
 		</ul>
+		<div class="menu__smm-wrapper">
+			<img src="" alt="" class="smm-wrapper_item">
+			<img src="" alt="" class="smm-wrapper_item">
+			<img src="" alt="" class="smm-wrapper_item">
+		</div>
+		<div class="menu__contacts">
+			<div class="contacts__phone"><a href="tel:+380637584123">+38 063 758 41 23</a></div>
+		</div>
 
 	</div>
-	<!-- <div class="header__menu menu">
-			<nav class="menu__body">
-				
-				<div class="list__container">
-					<div class="menu__wrapper">
-						<h1 class="main-logo">
-							<a class="menu__logo" href="#">
-								<span class="menu__logo-text">Status Kiev Law</span>
-							</a>
-						</h1>
-						<ul class="menu__list">
-							<li><a class="menu__item current" href="#">компания</a></li>
-							<li> <a class="menu__item" href="#">услуги</a></li>
-							<li> <a class="menu__item" href="#">партнеры</a></li>
-							<li> <a class="menu__item" href="#">публикации</a></li>
-							<li> <a class="menu__item" href="#">контакты</a></li>
-						</ul>
-						<div class="menu__contacts">
-							<div class="contacts__phone"><a href="tel:+380637584123">+38 063 758 41 23</a></div>
-						</div>
-					</div>
-					<button class="menu__button">поиск</button>
-				</div>
-			</nav>
-		</div> -->
-
-
-
+	
 </header>
