--- a/#src/index.html
+++ b/#src/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,11 +8,13 @@
     <link rel="stylesheet" href="./css/style.min.css">
     <title>Status Kiev Law</title>
 </head>
+
 <body>
     @@include('_header.html')
     <main class="main">
-        
+        @@include('_services.html')
     </main>
     <script src="js/script.min.js"></script>
 </body>
+
 </html>
