--- a/index.html
+++ b/index.html
@@ -40,14 +40,147 @@
 </header>
     <main class="main">
         <section class="services-container">
+    <div class="all-services-list">
+        <span class="all-services_title">ВНЖ в УКРАИНЕ:</span>
+        <ul class="all-services_list">
+            <li class="all-services_item"> - БРАК</li>
+            <li class="all-services_item"> - БИЗНЕС</li>
+            <li class="all-services_item"> - ВОЛОНТЕРСТВО</li>
+            <li class="all-services_item"> - ТРУДОУСТРОЙСТВО</li>
+        </ul>
+    </div>
     <div class="services-block">
-        <h2 class="services-title">ВНЖ</h2>
-        <p class="services-describe">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Culpa reiciendis
-            perspiciatis magni cumque consequuntur corrupti sapiente amet, illum commodi suscipit molestiae ad velit
-            odio! Nam fuga quisquam alias voluptate eum.</p>
+        <h2 class="services-title">ВНЖ Брак</h2>
+        <div class="servic-describe_wrapper">
+            <p class="services-describe_text">Одним из оснований для получения ВНЖ в Украине может быть
+                зарегистрированный брак с гражданином / гражданкой Украины.
+                Подробную информацию о данном основании вы можете получить связавшись с нашими юристами по телефону -
+                <a href="tel:+380637584123">+38 063 758 41 23</a>
+            </p>
+            <span class="services-describe_inside-list-title">Алгоритм нашей работы:</span>
+            <ul class="services-describe_inside-list">
+                <li class="services-describe_inside-list">- Консультация клиента</li>
+                <li class="services-describe_inside-list"></li>- Анализ ситуации и предложения решений для клиента</li>
+                <li class="services-describe_inside-list"></li>- Заключение договора о предоставлении юридических услуг
+                </li>
+                <li class="services-describe_inside-list"></li>- Подбор оснований для получения ВНЖ каждого из клиентов
+                в зависимости от индивидуальной ситуации
+                клиента</li>
+                <li class="services-describe_inside-list"></li>- Анализ документов полученных от клиента для объективной
+                оценки шансов на получение ВНЖ</li>
+                <li class="services-describe_inside-list"></li>- Сбор и подготовка документов для подачи на ВНЖ</li>
+                <li class="services-describe_inside-list"></li>- Встреча юриста с клиентом в сервисном центре для
+                сопровождения подачи документов клиентом на ВНЖ</li>
+                <li class="services-describe_inside-list"></li>- Взаимодействие с органами власти и сопровождение
+                получения ВНЖ</li>
+                <li class="services-describe_inside-list"></li>- Получение ВНЖ</li>
+            </ul>
+
+        </div>
         <div class="services-submit-wrapper">
-            <button class="services-submit-wrapper_btn">обратная связь</button>
             <span class="services-submit-wrapper_price">цена</span>
+            <button class="services-submit-wrapper_btn">обратная связь</button>
+        </div>
+    </div>
+    <div class="services-block">
+        <h2 class="services-title">ВНЖ Бизнес</h2>
+        <div class="servic-describe_wrapper">
+            <p class="services-describe_text">Надежным основанием для получения ВНЖ в Украине для гражданина практически
+                любого государства на сегодняшний день является – Бизнес.
+                Данное основание позволяет получить ВНЖ как на 1 год так и на 3 года в зависимости от необходимости
+                клиента.
+                Подробную информацию о данном основании вы можете получить связавшись с нашими юристами по телефону -
+                <a href="tel:+380637584123">+38 063 758 41 23</a>
+            </p>
+            <span class="services-describe_inside-list-title">Алгоритм нашей работы:</span>
+            <ul class="services-describe_inside-list">
+                <li class="services-describe_inside-list">- Консультация клиента</li>
+                <li class="services-describe_inside-list"></li>- Анализ ситуации и предложения решений для клиента</li>
+                <li class="services-describe_inside-list"></li>- Заключение договора о предоставлении юридических услуг
+                </li>
+                <li class="services-describe_inside-list"></li>- Подбор оснований для получения ВНЖ каждого из клиентов
+                в зависимости от индивидуальной ситуации
+                клиента</li>
+                <li class="services-describe_inside-list"></li>- Анализ документов полученных от клиента для объективной
+                оценки шансов на получение ВНЖ</li>
+                <li class="services-describe_inside-list"></li>- Сбор и подготовка документов для подачи на ВНЖ</li>
+                <li class="services-describe_inside-list"></li>- Встреча юриста с клиентом в сервисном центре для
+                сопровождения подачи документов клиентом на ВНЖ</li>
+                <li class="services-describe_inside-list"></li>- Взаимодействие с органами власти и сопровождение
+                получения ВНЖ</li>
+                <li class="services-describe_inside-list"></li>- Получение ВНЖ</li>
+            </ul>
+
+        </div>
+        <div class="services-submit-wrapper">
+            <span class="services-submit-wrapper_price">цена</span>
+            <button class="services-submit-wrapper_btn">обратная связь</button>
+        </div>
+    </div>
+    <div class="services-block">
+        <h2 class="services-title">ВНЖ Волонтерство</h2>
+        <div class="servic-describe_wrapper">
+            <p class="services-describe_text">Членство в волонтерской организации дает возможность получить ВНЖ в
+                Украине на 1 год. Подробную информацию о данном основании вы можете получить связавшись с нашими
+                юристами по телефону -
+                <a href="tel:+380637584123">+38 063 758 41 23</a>
+            </p>
+            <span class="services-describe_inside-list-title">Алгоритм нашей работы:</span>
+            <ul class="services-describe_inside-list">
+                <li class="services-describe_inside-list">- Консультация клиента</li>
+                <li class="services-describe_inside-list"></li>- Анализ ситуации и предложения решений для клиента</li>
+                <li class="services-describe_inside-list"></li>- Заключение договора о предоставлении юридических услуг
+                </li>
+                <li class="services-describe_inside-list"></li>- Подбор оснований для получения ВНЖ каждого из клиентов
+                в зависимости от индивидуальной ситуации
+                клиента</li>
+                <li class="services-describe_inside-list"></li>- Анализ документов полученных от клиента для объективной
+                оценки шансов на получение ВНЖ</li>
+                <li class="services-describe_inside-list"></li>- Сбор и подготовка документов для подачи на ВНЖ</li>
+                <li class="services-describe_inside-list"></li>- Встреча юриста с клиентом в сервисном центре для
+                сопровождения подачи документов клиентом на ВНЖ</li>
+                <li class="services-describe_inside-list"></li>- Взаимодействие с органами власти и сопровождение
+                получения ВНЖ</li>
+                <li class="services-describe_inside-list"></li>- Получение ВНЖ</li>
+            </ul>
+
+        </div>
+        <div class="services-submit-wrapper">
+            <span class="services-submit-wrapper_price">цена</span>
+            <button class="services-submit-wrapper_btn">обратная связь</button>
+        </div>
+    </div>
+    <div class="services-block">
+        <h2 class="services-title">ВНЖ Трудоустройство</h2>
+        <div class="servic-describe_wrapper">
+            <p class="services-describe_text">Трудоустройство в Украине дает возможность иностранцу получить ВНЖ в
+                Украине как на 1 год так и на 3 года.
+                Подробную информацию о данном основании вы можете получить связавшись с нашими юристами по телефону -
+                <a href="tel:+380637584123">+38 063 758 41 23</a>
+            </p>
+            <span class="services-describe_inside-list-title">Алгоритм нашей работы:</span>
+            <ul class="services-describe_inside-list">
+                <li class="services-describe_inside-list">- Консультация клиента</li>
+                <li class="services-describe_inside-list"></li>- Анализ ситуации и предложения решений для клиента</li>
+                <li class="services-describe_inside-list"></li>- Заключение договора о предоставлении юридических услуг
+                </li>
+                <li class="services-describe_inside-list"></li>- Подбор оснований для получения ВНЖ каждого из клиентов
+                в зависимости от индивидуальной ситуации
+                клиента</li>
+                <li class="services-describe_inside-list"></li>- Анализ документов полученных от клиента для объективной
+                оценки шансов на получение ВНЖ</li>
+                <li class="services-describe_inside-list"></li>- Сбор и подготовка документов для подачи на ВНЖ</li>
+                <li class="services-describe_inside-list"></li>- Встреча юриста с клиентом в сервисном центре для
+                сопровождения подачи документов клиентом на ВНЖ</li>
+                <li class="services-describe_inside-list"></li>- Взаимодействие с органами власти и сопровождение
+                получения ВНЖ</li>
+                <li class="services-describe_inside-list"></li>- Получение ВНЖ</li>
+            </ul>
+
+        </div>
+        <div class="services-submit-wrapper">
+            <span class="services-submit-wrapper_price">цена</span>
+            <button class="services-submit-wrapper_btn">обратная связь</button>
         </div>
     </div>
 </section>
