--- a/index.html
+++ b/index.html
@@ -40,147 +40,143 @@
 </header>
     <main class="main">
         <section class="services-container">
-    <div class="all-services-list">
-        <span class="all-services_title">ВНЖ в УКРАИНЕ:</span>
-        <ul class="all-services_list">
-            <li class="all-services_item"> - БРАК</li>
-            <li class="all-services_item"> - БИЗНЕС</li>
-            <li class="all-services_item"> - ВОЛОНТЕРСТВО</li>
-            <li class="all-services_item"> - ТРУДОУСТРОЙСТВО</li>
-        </ul>
-    </div>
-    <div class="services-block">
-        <h2 class="services-title">ВНЖ Брак</h2>
-        <div class="servic-describe_wrapper">
-            <p class="services-describe_text">Одним из оснований для получения ВНЖ в Украине может быть
-                зарегистрированный брак с гражданином / гражданкой Украины.
-                Подробную информацию о данном основании вы можете получить связавшись с нашими юристами по телефону -
-                <a href="tel:+380637584123">+38 063 758 41 23</a>
-            </p>
-            <span class="services-describe_inside-list-title">Алгоритм нашей работы:</span>
-            <ul class="services-describe_inside-list">
-                <li class="services-describe_inside-list">- Консультация клиента</li>
-                <li class="services-describe_inside-list"></li>- Анализ ситуации и предложения решений для клиента</li>
-                <li class="services-describe_inside-list"></li>- Заключение договора о предоставлении юридических услуг
-                </li>
-                <li class="services-describe_inside-list"></li>- Подбор оснований для получения ВНЖ каждого из клиентов
-                в зависимости от индивидуальной ситуации
-                клиента</li>
-                <li class="services-describe_inside-list"></li>- Анализ документов полученных от клиента для объективной
-                оценки шансов на получение ВНЖ</li>
-                <li class="services-describe_inside-list"></li>- Сбор и подготовка документов для подачи на ВНЖ</li>
-                <li class="services-describe_inside-list"></li>- Встреча юриста с клиентом в сервисном центре для
-                сопровождения подачи документов клиентом на ВНЖ</li>
-                <li class="services-describe_inside-list"></li>- Взаимодействие с органами власти и сопровождение
-                получения ВНЖ</li>
-                <li class="services-describe_inside-list"></li>- Получение ВНЖ</li>
-            </ul>
 
+    <div class="topping-wrapper">
+        <div class="all-services-list">
+            <span class="all-services_title">ВНЖ в УКРАИНЕ:</span>
+            <ul class="all-services_list">
+                <li class="all-services_item">  БРАК</li>
+                <li class="all-services_item">  БИЗНЕС</li>
+                <li class="all-services_item">  ВОЛОНТЕРСТВО</li>
+                <li class="all-services_item">  ТРУДОУСТРОЙСТВО</li>
+            </ul>
         </div>
-        <div class="services-submit-wrapper">
-            <span class="services-submit-wrapper_price">цена</span>
-            <button class="services-submit-wrapper_btn">обратная связь</button>
+        <div class="topping__img" ><img src="./img/toping-fon.png" height="300px" alt="">
         </div>
     </div>
-    <div class="services-block">
-        <h2 class="services-title">ВНЖ Бизнес</h2>
-        <div class="servic-describe_wrapper">
-            <p class="services-describe_text">Надежным основанием для получения ВНЖ в Украине для гражданина практически
-                любого государства на сегодняшний день является – Бизнес.
-                Данное основание позволяет получить ВНЖ как на 1 год так и на 3 года в зависимости от необходимости
-                клиента.
-                Подробную информацию о данном основании вы можете получить связавшись с нашими юристами по телефону -
-                <a href="tel:+380637584123">+38 063 758 41 23</a>
-            </p>
-            <span class="services-describe_inside-list-title">Алгоритм нашей работы:</span>
-            <ul class="services-describe_inside-list">
-                <li class="services-describe_inside-list">- Консультация клиента</li>
-                <li class="services-describe_inside-list"></li>- Анализ ситуации и предложения решений для клиента</li>
-                <li class="services-describe_inside-list"></li>- Заключение договора о предоставлении юридических услуг
-                </li>
-                <li class="services-describe_inside-list"></li>- Подбор оснований для получения ВНЖ каждого из клиентов
-                в зависимости от индивидуальной ситуации
-                клиента</li>
-                <li class="services-describe_inside-list"></li>- Анализ документов полученных от клиента для объективной
-                оценки шансов на получение ВНЖ</li>
-                <li class="services-describe_inside-list"></li>- Сбор и подготовка документов для подачи на ВНЖ</li>
-                <li class="services-describe_inside-list"></li>- Встреча юриста с клиентом в сервисном центре для
-                сопровождения подачи документов клиентом на ВНЖ</li>
-                <li class="services-describe_inside-list"></li>- Взаимодействие с органами власти и сопровождение
-                получения ВНЖ</li>
-                <li class="services-describe_inside-list"></li>- Получение ВНЖ</li>
-            </ul>
+    <div class="services-blocks">
+        <div class="services-blocks_service">
+            <h2 class="service-title">ВНЖ Брак</h2>
+            <div class="service-describe_wrapper collapsed">
+                <p class="service-describe_text">Одним из оснований для получения ВНЖ в Украине может быть
+                    зарегистрированный брак с гражданином / гражданкой Украины.
+                    Подробную информацию о данном основании вы можете получить связавшись с нашими юристами по телефону
+                    -
+                    <a href="tel:+380637584123">+38 063 758 41 23</a>
+                </p>
+                <span class="service-describe_inside-list-title">Алгоритм нашей работы:</span>
+                <ul class="service-describe_inside-list">
+                    <li>- Консультация клиента</li>
+                    <li>- Анализ ситуации и предложения решений для клиента</li>
+                    <li>- Заключение договора о предоставлении юридических услуг</li>
+                    <li>- Подбор оснований для получения ВНЖ каждого из клиентов в зависимости от индивидуальной
+                        ситуации клиента</li>
+                    <li>- Анализ документов полученных от клиента для объективной оценки шансов на получение ВНЖ</li>
+                    <li>- Сбор и подготовка документов для подачи на ВНЖ</li>
+                    <li>- Встреча юриста с клиентом в сервисном центре для сопровождения подачи документов клиентом на
+                        ВНЖ</li>
+                    <li>- Взаимодействие с органами власти и сопровождение получения ВНЖ</li>
+                    <li>- Получение ВНЖ</li>
+                </ul>
+                <hr>
+                <div class="service-submit-wrapper">
+                    <span class="service-submit-wrapper_price">цена</span>
+                    <button class="service-submit-wrapper_btn">обратная связь</button>
+                </div>
+            </div>
 
         </div>
-        <div class="services-submit-wrapper">
-            <span class="services-submit-wrapper_price">цена</span>
-            <button class="services-submit-wrapper_btn">обратная связь</button>
-        </div>
-    </div>
-    <div class="services-block">
-        <h2 class="services-title">ВНЖ Волонтерство</h2>
-        <div class="servic-describe_wrapper">
-            <p class="services-describe_text">Членство в волонтерской организации дает возможность получить ВНЖ в
-                Украине на 1 год. Подробную информацию о данном основании вы можете получить связавшись с нашими
-                юристами по телефону -
-                <a href="tel:+380637584123">+38 063 758 41 23</a>
-            </p>
-            <span class="services-describe_inside-list-title">Алгоритм нашей работы:</span>
-            <ul class="services-describe_inside-list">
-                <li class="services-describe_inside-list">- Консультация клиента</li>
-                <li class="services-describe_inside-list"></li>- Анализ ситуации и предложения решений для клиента</li>
-                <li class="services-describe_inside-list"></li>- Заключение договора о предоставлении юридических услуг
-                </li>
-                <li class="services-describe_inside-list"></li>- Подбор оснований для получения ВНЖ каждого из клиентов
-                в зависимости от индивидуальной ситуации
-                клиента</li>
-                <li class="services-describe_inside-list"></li>- Анализ документов полученных от клиента для объективной
-                оценки шансов на получение ВНЖ</li>
-                <li class="services-describe_inside-list"></li>- Сбор и подготовка документов для подачи на ВНЖ</li>
-                <li class="services-describe_inside-list"></li>- Встреча юриста с клиентом в сервисном центре для
-                сопровождения подачи документов клиентом на ВНЖ</li>
-                <li class="services-describe_inside-list"></li>- Взаимодействие с органами власти и сопровождение
-                получения ВНЖ</li>
-                <li class="services-describe_inside-list"></li>- Получение ВНЖ</li>
-            </ul>
+        <div class="services-blocks_service">
+            <h2 class="service-title">ВНЖ Бизнес</h2>
+            <div class="service-describe_wrapper collapsed">
+                <p class="service-describe_text">Надежным основанием для получения ВНЖ в Украине для гражданина
+                    практически
+                    любого государства на сегодняшний день является – Бизнес.
+                    Данное основание позволяет получить ВНЖ как на 1 год так и на 3 года в зависимости от необходимости
+                    клиента.
+                    Подробную информацию о данном основании вы можете получить связавшись с нашими юристами по телефону
+                    -
+                    <a href="tel:+380637584123">+38 063 758 41 23</a>
+                </p>
+                <span class="service-describe_inside-list-title">Алгоритм нашей работы:</span>
+                <ul class="service-describe_inside-list">
+                    <li>- Консультация клиента</li>
+                    <li>- Анализ ситуации и предложения решений для клиента</li>
+                    <li>- Заключение договора о предоставлении юридических услуг</li>
+                    <li>- Подбор оснований для получения ВНЖ каждого из клиентов в зависимости от индивидуальной
+                        ситуации клиента</li>
+                    <li>- Анализ документов полученных от клиента для объективной оценки шансов на получение ВНЖ</li>
+                    <li>- Сбор и подготовка документов для подачи на ВНЖ</li>
+                    <li>- Встреча юриста с клиентом в сервисном центре для сопровождения подачи документов клиентом на
+                        ВНЖ</li>
+                    <li>- Взаимодействие с органами власти и сопровождение получения ВНЖ</li>
+                    <li>- Получение ВНЖ</li>
+                </ul>
+                <div class="service-submit-wrapper">
+                    <span class="service-submit-wrapper_price">цена</span>
+                    <button class="service-submit-wrapper_btn">обратная связь</button>
+                </div>
+            </div>
 
         </div>
-        <div class="services-submit-wrapper">
-            <span class="services-submit-wrapper_price">цена</span>
-            <button class="services-submit-wrapper_btn">обратная связь</button>
-        </div>
-    </div>
-    <div class="services-block">
-        <h2 class="services-title">ВНЖ Трудоустройство</h2>
-        <div class="servic-describe_wrapper">
-            <p class="services-describe_text">Трудоустройство в Украине дает возможность иностранцу получить ВНЖ в
-                Украине как на 1 год так и на 3 года.
-                Подробную информацию о данном основании вы можете получить связавшись с нашими юристами по телефону -
-                <a href="tel:+380637584123">+38 063 758 41 23</a>
-            </p>
-            <span class="services-describe_inside-list-title">Алгоритм нашей работы:</span>
-            <ul class="services-describe_inside-list">
-                <li class="services-describe_inside-list">- Консультация клиента</li>
-                <li class="services-describe_inside-list"></li>- Анализ ситуации и предложения решений для клиента</li>
-                <li class="services-describe_inside-list"></li>- Заключение договора о предоставлении юридических услуг
-                </li>
-                <li class="services-describe_inside-list"></li>- Подбор оснований для получения ВНЖ каждого из клиентов
-                в зависимости от индивидуальной ситуации
-                клиента</li>
-                <li class="services-describe_inside-list"></li>- Анализ документов полученных от клиента для объективной
-                оценки шансов на получение ВНЖ</li>
-                <li class="services-describe_inside-list"></li>- Сбор и подготовка документов для подачи на ВНЖ</li>
-                <li class="services-describe_inside-list"></li>- Встреча юриста с клиентом в сервисном центре для
-                сопровождения подачи документов клиентом на ВНЖ</li>
-                <li class="services-describe_inside-list"></li>- Взаимодействие с органами власти и сопровождение
-                получения ВНЖ</li>
-                <li class="services-describe_inside-list"></li>- Получение ВНЖ</li>
-            </ul>
+        <div class="services-blocks_service">
+            <h2 class="service-title">ВНЖ Волонтерство</h2>
+            <div class="service-describe_wrapper collapsed">
+                <p class="service-describe_text">Членство в волонтерской организации дает возможность получить ВНЖ в
+                    Украине на 1 год. Подробную информацию о данном основании вы можете получить связавшись с нашими
+                    юристами по телефону -
+                    <a href="tel:+380637584123">+38 063 758 41 23</a>
+                </p>
+                <span class="service-describe_inside-list-title">Алгоритм нашей работы:</span>
+                <ul class="service-describe_inside-list">
+                    <li>- Консультация клиента</li>
+                    <li>- Анализ ситуации и предложения решений для клиента</li>
+                    <li>- Заключение договора о предоставлении юридических услуг</li>
+                    <li>- Подбор оснований для получения ВНЖ каждого из клиентов в зависимости от индивидуальной
+                        ситуации клиента</li>
+                    <li>- Анализ документов полученных от клиента для объективной оценки шансов на получение ВНЖ</li>
+                    <li>- Сбор и подготовка документов для подачи на ВНЖ</li>
+                    <li>- Встреча юриста с клиентом в сервисном центре для сопровождения подачи документов клиентом на
+                        ВНЖ</li>
+                    <li>- Взаимодействие с органами власти и сопровождение получения ВНЖ</li>
+                    <li>- Получение ВНЖ</li>
+                </ul>
+                <div class="service-submit-wrapper">
+                    <span class="service-submit-wrapper_price">цена</span>
+                    <button class="service-submit-wrapper_btn">обратная связь</button>
+                </div>
+            </div>
 
         </div>
-        <div class="services-submit-wrapper">
-            <span class="services-submit-wrapper_price">цена</span>
-            <button class="services-submit-wrapper_btn">обратная связь</button>
+        <div class="services-blocks_service">
+            <h2 class="service-title">ВНЖ Трудоустройство</h2>
+            <div class="service-describe_wrapper collapsed">
+                <p class="service-describe_text">Трудоустройство в Украине дает возможность иностранцу получить ВНЖ в
+                    Украине как на 1 год так и на 3 года.
+                    Подробную информацию о данном основании вы можете получить связавшись с нашими юристами по телефону
+                    -
+                    <a href="tel:+380637584123">+38 063 758 41 23</a>
+                </p>
+                <span class="service-describe_inside-list-title">Алгоритм нашей работы:</span>
+                <ul class="service-describe_inside-list">
+                    <li>- Консультация клиента</li>
+                    <li>- Анализ ситуации и предложения решений для клиента</li>
+                    <li>- Заключение договора о предоставлении юридических услуг</li>
+                    <li>- Подбор оснований для получения ВНЖ каждого из клиентов в зависимости от индивидуальной
+                        ситуации клиента</li>
+                    <li>- Анализ документов полученных от клиента для объективной оценки шансов на получение ВНЖ</li>
+                    <li>- Сбор и подготовка документов для подачи на ВНЖ</li>
+                    <li>- Встреча юриста с клиентом в сервисном центре для сопровождения подачи документов клиентом на
+                        ВНЖ</li>
+                    <li>- Взаимодействие с органами власти и сопровождение получения ВНЖ</li>
+                    <li>- Получение ВНЖ</li>
+                </ul>
+                <div class="service-submit-wrapper">
+                    <span class="service-submit-wrapper_price">цена</span>
+                    <button class="service-submit-wrapper_btn">обратная связь</button>
+                </div>
+            </div>
+
         </div>
     </div>
 </section>
